# LegalTech-ResearchPaper

./: .gitignore  pyproject.toml
General Embedding/: Qwen_llama.ipynb
Specialised Embedding/: InLegalBERT_llama_hf.ipynb  Index and npy files
Specialised Embedding/InCaseLaw/: Index file and csv for InCaselaw
Specialised Embedding/InLegalBERT/: InLegalBERT_llama_hf.ipynb
